fixed spacing issues with letters

--- a/css/main.css
+++ b/css/main.css
@@ -104,14 +104,15 @@
   text-align:center;
   float:left;
   font-family:sans-serif;
+  position: absolute;
 }
 
 .cellValue {
   font-size: 24px;
   font-family:sans-serif;
-  padding-left:10px;
-  padding-top:5px;
+  padding-top:3px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .center-pills {
